--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: America/New_York
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Coffee Lab Pro Blog # the main title
+title: Coffee Lab Pro # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Information Security Engineer | Microsoft Cerified | CEH | Top 3% THM # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
