--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/New_York
 
 title: Coffee Lab Pro # the main title
 
-tagline: Information Security Engineer | Microsoft Cerified | CEH | Top 3% THM # it will display as the sub-title
+tagline: Information Security Engineer | Microsoft Cerified | CISSP | Top 3% THM # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Brandon Hough
-  email: brandon@ultrakicks.me # change to your email address
+  email: brandon@coffeelab.me # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/ultrakicks_ # change to your twitter homepage
